--- a/src/MemoEngine/MemoEngine/MemoEngine.csproj
+++ b/src/MemoEngine/MemoEngine/MemoEngine.csproj
@@ -6,4 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Components\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
